fix: User avatar on mobile and tablets

--- a/less/darkmode.less
+++ b/less/darkmode.less
@@ -208,13 +208,6 @@ html[data-initial-dark="true"] {
 				}
 			}
 
-			@media (max-width: @screen-sm-max) {
-				.post-header {
-					background-color: @bg-primary-dark !important;
-					border-color: @border-primry-dark !important;
-				}
-			}
-
 			.content {
 				background: @bg-body-dark;
 				border-color: @border-primry-dark;
